Adicionando comentário para ver a falha da pipeline acontecendo (rule proibido comentários)

--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
 
   <h2>Redes</h2>
   <a href="https://www.linkedin.com">LinkedIn</a>
+
+
+  <!--: ajustar o site depois -->
+
 </body>
 </html>
+
+
