--- a/index.html
+++ b/index.html
@@ -2,28 +2,145 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Portfólio - Davi Martins</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Davi Martins - DevOps Engineer & Full Stack Developer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Davi Martins</h1>
+  <header class="navbar">
+    <div class="container">
+      <div class="logo">DM</div>
+      <nav>
+        <a href="#home">Home</a>
+        <a href="#about">Sobre</a>
+        <a href="#skills">Habilidades</a>
+        <a href="#projects">Projetos</a>
+        <a href="#contact">Contato</a>
+      </nav>
+    </div>
+  </header>
 
-  <h2>Habilidades Técnicas</h2>
-  <ul>
-    <li>Git e GitHub</li>
-    <li>HTML e CSS</li>
-    <li>CI/CD com GitHub Actions</li>
-  </ul>
+  <section id="home" class="hero">
+    <div class="container">
+      <div class="hero-content">
+        <h1>Davi Martins</h1>
+        <p class="hero-subtitle">DevOps Engineer & Full Stack Developer</p>
+        <p class="hero-description">Especializado em automação, CI/CD e desenvolvimento de aplicações escaláveis</p>
+        <div class="hero-buttons">
+          <a href="#contact" class="btn btn-primary">Entrar em Contato</a>
+          <a href="#projects" class="btn btn-secondary">Ver Projetos</a>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <h2>Projetos</h2>
-  <p>Portfólio profissional com automação CI/CD.</p>
+  <section id="about" class="about">
+    <div class="container">
+      <h2>Sobre Mim</h2>
+      <p>Sou um profissional de tecnologia com experiência em DevOps, automação de processos e desenvolvimento full stack. Apaixonado por criar pipelines eficientes e garantir a qualidade do código em produção.</p>
+      <p>Trabalho com as melhores práticas de CI/CD, garantindo que cada mudança no código seja testada, validada e publicada automaticamente com segurança.</p>
+    </div>
+  </section>
 
-  <h2>Redes</h2>
-  <a href="https://www.linkedin.com">LinkedIn</a>
+  <section id="skills" class="skills">
+    <div class="container">
+      <h2>Habilidades Técnicas</h2>
+      <div class="skills-grid">
+        <div class="skill-card">
+          <div class="skill-icon">⚙️</div>
+          <h3>DevOps</h3>
+          <ul>
+            <li>GitHub Actions</li>
+            <li>CI/CD Pipelines</li>
+            <li>Docker & Containers</li>
+          </ul>
+        </div>
+        <div class="skill-card">
+          <div class="skill-icon">💻</div>
+          <h3>Desenvolvimento</h3>
+          <ul>
+            <li>HTML & CSS</li>
+            <li>JavaScript & TypeScript</li>
+            <li>Node.js & Python</li>
+          </ul>
+        </div>
+        <div class="skill-card">
+          <div class="skill-icon">🔧</div>
+          <h3>Ferramentas</h3>
+          <ul>
+            <li>Git & GitHub</li>
+            <li>Linux & Shell</li>
+            <li>Testes Automatizados</li>
+          </ul>
+        </div>
+        <div class="skill-card">
+          <div class="skill-icon">📊</div>
+          <h3>Metodologias</h3>
+          <ul>
+            <li>Agile & Scrum</li>
+            <li>Code Quality</li>
+            <li>Best Practices</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section id="projects" class="projects">
+    <div class="container">
+      <h2>Projetos Destacados</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <div class="project-header">🚀</div>
+          <h3>Pipeline CI/CD Automática</h3>
+          <p>Sistema completo de validação e deploy automatizado usando GitHub Actions, com testes em múltiplas versões Node.js e publicação em GitHub Pages.</p>
+          <div class="project-tags">
+            <span class="tag">GitHub Actions</span>
+            <span class="tag">CI/CD</span>
+            <span class="tag">Automação</span>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-header">🌐</div>
+          <h3>Portfólio Profissional</h3>
+          <p>Landing page responsiva com design moderno, demonstrando habilidades em HTML, CSS e otimização de performance para produção.</p>
+          <div class="project-tags">
+            <span class="tag">HTML</span>
+            <span class="tag">CSS</span>
+            <span class="tag">Design</span>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-header">🔍</div>
+          <h3>Validação Automatizada</h3>
+          <p>Sistema de QA automatizado que valida qualidade do código, detecta links quebrados, verifica tamanho de arquivos e encontra problemas no HTML.</p>
+          <div class="project-tags">
+            <span class="tag">QA</span>
+            <span class="tag">Testes</span>
+            <span class="tag">Shell</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
- 
+  <section id="contact" class="contact">
+    <div class="container">
+      <h2>Vamos Conversar?</h2>
+      <p>Tenho interesse em oportunidades de DevOps, automação e desenvolvimento full stack.</p>
+      <div class="social-links">
+        <a href="https://www.linkedin.com/in/martinsdavi/" target="_blank" class="social-btn">LinkedIn</a>
+        <a href="https://github.com" target="_blank" class="social-btn">GitHub</a>
+        <a href="mailto:davi@example.com" class="social-btn">Email</a>
+      </div>
+    </div>
+  </section>
 
+  <footer>
+    <div class="container">
+      <p>&copy; 2026 Davi Martins. Todos os direitos reservados.</p>
+    </div>
+  </footer>
 </body>
 </html>
 
