test: Adicionar TODO para teste de CI failure
Este commit contém um erro intencional (TODO no HTML) para demonstrar o CI falhando.
Este é apenas para fins de demonstração e será removido após o teste.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Davi Martins - DevOps Engineer & Full Stack Developer</title>
   <link rel="stylesheet" href="style.css">
+  <!-- TODO: Implementar dark mode no portfólio -->
 </head>
 <body>
   <header class="navbar">
@@ -47,7 +48,6 @@
       <h2>Habilidades Técnicas</h2>
       <div class="skills-grid">
         <div class="skill-card">
-          <div class="skill-icon">⚙️</div>
           <h3>DevOps</h3>
           <ul>
             <li>GitHub Actions</li>
@@ -56,7 +56,6 @@
           </ul>
         </div>
         <div class="skill-card">
-          <div class="skill-icon">💻</div>
           <h3>Desenvolvimento</h3>
           <ul>
             <li>HTML & CSS</li>
@@ -65,7 +64,6 @@
           </ul>
         </div>
         <div class="skill-card">
-          <div class="skill-icon">🔧</div>
           <h3>Ferramentas</h3>
           <ul>
             <li>Git & GitHub</li>
@@ -74,7 +72,6 @@
           </ul>
         </div>
         <div class="skill-card">
-          <div class="skill-icon">📊</div>
           <h3>Metodologias</h3>
           <ul>
             <li>Agile & Scrum</li>
@@ -91,7 +88,7 @@
       <h2>Projetos Destacados</h2>
       <div class="projects-grid">
         <div class="project-card">
-          <div class="project-header">🚀</div>
+          <div class="project-header"></div>
           <h3>Pipeline CI/CD Automática</h3>
           <p>Sistema completo de validação e deploy automatizado usando GitHub Actions, com testes em múltiplas versões Node.js e publicação em GitHub Pages.</p>
           <div class="project-tags">
@@ -101,7 +98,7 @@
           </div>
         </div>
         <div class="project-card">
-          <div class="project-header">🌐</div>
+          <div class="project-header"></div>
           <h3>Portfólio Profissional</h3>
           <p>Landing page responsiva com design moderno, demonstrando habilidades em HTML, CSS e otimização de performance para produção.</p>
           <div class="project-tags">
@@ -111,7 +108,7 @@
           </div>
         </div>
         <div class="project-card">
-          <div class="project-header">🔍</div>
+          <div class="project-header"></div>
           <h3>Validação Automatizada</h3>
           <p>Sistema de QA automatizado que valida qualidade do código, detecta links quebrados, verifica tamanho de arquivos e encontra problemas no HTML.</p>
           <div class="project-tags">
@@ -127,11 +124,11 @@
   <section id="contact" class="contact">
     <div class="container">
       <h2>Vamos Conversar?</h2>
-      <p>Tenho interesse em oportunidades de DevOps, automação e desenvolvimento full stack.</p>
+      <p>Tenho interesse em oportunidades de Engenharia de Dados / Análise de Dados.</p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/martinsdavi/" target="_blank" class="social-btn">LinkedIn</a>
-        <a href="https://github.com" target="_blank" class="social-btn">GitHub</a>
-        <a href="mailto:davi@example.com" class="social-btn">Email</a>
+        <a href="https://github.com/martinsdavi" target="_blank" class="social-btn">GitHub</a>
+        <a href="mailto:davimsantos09134@gmail.com" class="social-btn">Email</a>
       </div>
     </div>
   </section>
