feat: correcao de yml

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <p>Portfólio profissional com automação CI/CD.</p>
 
   <h2>Redes</h2>
-  <a href="https://www.linkedin.com">LinkedIn</a>
+  <a href="https://www.linkedin.com/in/martinsdavi">LinkedIn</a>
 
 
   <!--: ajustar o site depois -->
